# jupyterhub-extensions

./: .gitignore  .python-version  Dockerfile  LICENSE  README.md  jupyterhub_config.py  options_form_config.json  pyproject.toml  watch.py
.github/: dependabot.yml
.github/workflows/: check-KeyCloakAuthenticator.yml  ci.yml  release.yml  security-analysis.yml  swan-ci-ca.yml
CERNHandlers/: LICENSE  README.md  setup.py  version.py
CERNHandlers/cernhandlers/: __init__.py  handlers_configs.py  home_handler.py  proj_url_checker.py  spawn_handler.py  status_handler.py
CERNSpawner/: README.md  requirements.txt  setup.py
CERNSpawner/cernspawner/: cernspawner.py  cspawner.py
JRCDeployment/: Dockerfile  Makefile
JRCDeployment/rootfs/root/: jupyterhub-xorigin-fix.patch  start.sh
JRCDeployment/rootfs/root/jupyterhub_config/: kubespawner.py
JRCDeployment/rootfs/srv/jupyterhub/JeodppSpawner/: setup.py
JRCDeployment/rootfs/srv/jupyterhub/JeodppSpawner/JeoClasses/: mpi.py  userform.py
JRCDeployment/rootfs/srv/jupyterhub/JeodppSpawner/jeodppspawner/: __init__.py  jeodppkubespawner.py  jeodppspawner.py
KeyCloakAuthenticator/: .bumpversion.cfg  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
KeyCloakAuthenticator/keycloakauthenticator/: __init__.py  _version.py  auth.py  metrics.py
KeyCloakAuthenticator/keycloakauthenticator/tests/: test_auth.py
SwanCuller/: .bumpversion.cfg  README.md  pyproject.toml  setup.py
SwanCuller/swanculler/: app.py
SwanCuller/tests/: test_app.py
SwanHub/: .bumpversion.cfg  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.py
SwanHub/swanhub/: __init__.py  __main__.py  _version.py  app.py  error_handler.py  handlers_configs.py  spawn_handler.py  userapi_handler.py
SwanHub/swanhub/static/css/: icons.css  style.less  style_legacy.less  vars.less
SwanHub/swanhub/static/css/fonts/: swan-icons.eot
SwanHub/swanhub/templates/: 404.html  _macros.html  admin.html  error.html  home.html  login.html  logout.html  maintenance.html  not_running.html  oauth.html  page.html  spawn.html  spawn_conflict.html  spawn_pending.html  stop_pending.html  unreachable_container.html
SwanHub/tests/: test_startup.py
SwanNotificationsService/: .bumpversion.cfg  Dockerfile  README.md  pyproject.toml  setup.py
SwanNotificationsService/swannotificationsservice/: __init__.py  __main__.py  app.py  service.py
SwanSpawner/: .bumpversion.cfg  LICENSE  MANIFEST.in  README.md  options_form_config.yaml  pyproject.toml  setup.py
SwanSpawner/swanspawner/: __init__.py  _gpuinfo.py  _version.py  binderspawner_mixin.py  localswanspawner.py  swandockerspawner.py  swankubespawner.py  swanspawner.py
SwanSpawner/swanspawner/templates/: options_form_template.html
SwanSpawner/tests/: test_swanspawner.py
culler/: check_ticket.sh  cull_idle_servers.py
kerberosauthenticator/: README.md  setup.py
kerberosauthenticator/kerberosauthenticator/: __init__.py
passthroughauthenticator/: LICENSE  README.md  jupyterhub.sqlite  setup.py
passthroughauthenticator/passthroughauthenticator/: __init__.py  passthroughauthenticator.py
scripts/: cull_idle_servers.py  restart_culling.sh  restart_jupyterhub.sh  start_jupyterhub.py  start_proxy.sh
templates/: 404.html  admin.html  error.html  home.html  login.html  not_running.html  page.html  spawn.html  spawn_pending.html  stop_pending.html  token.html  unreachable_container.html
