[project]
name = "keycloakauthenticator"
dynamic = ["version"]
description = "KeyCloakAuthenticator: Authenticate JupyterHub users with KeyCloak and OIDC"
readme = "README.md"
license = "AGPL-3.0"
authors = [{ name = "SWAN Admins" }]
keywords = ["JupyterHub", "Authenticator", "SWAN", "CERN"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = ["jupyterhub", "oauthenticator==16.3.1", "PyJWT[crypto]>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest==9.0.1", "pytest-asyncio==1.3.0"]

[project.urls]
Homepage = "https://github.com/swan-cern/jupyterhub-extensions"
GitHub = "https://github.com/swan-cern/jupyterhub-extensions"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch]
version = { path = "keycloakauthenticator/_version.py" }

[tool.hatch.build]
packages = ["keycloakauthenticator"]
# tests not needed in the built package
exclude = ["tests/"]
