[project]
name = "swanculler"
dynamic = ["version"]
description = "Culler for JupyterHub"
readme = "README.md"
license = "AGPL-3.0"
authors = [{ name = "SWAN Admins" }]
keywords = ["JupyterHub", "SWAN", "CERN"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = ["tornado", "python-dateutil"]

[project.urls]
Homepage = "https://github.com/swan-cern/jupyterhub-extensions"
GitHub = "https://github.com/swan-cern/jupyterhub-extensions"

[project.scripts]
swanculler = "swanculler.app:main"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch]
version = { path = "swanculler/_version.py" }

[tool.hatch.build]
packages = ["swanculler"]
