[project]
name = "swanhub"
dynamic = ["version"]
description = "Custom SWAN templates and handlers for JupyterHub"
readme = "README.md"
license = "AGPL-3.0"
authors = [{ name = "SWAN Admins" }]
keywords = ["JupyterHub", "SWAN", "CERN"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = ["jupyterhub~=4.1.6"]

[project.urls]
Homepage = "https://github.com/swan-cern/jupyterhub-extensions"
GitHub = "https://github.com/swan-cern/jupyterhub-extensions"

[project.scripts]
swanhub = "swanhub.app:main"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch]
version = { path = "swanhub/_version.py" }

[tool.hatch.build]
packages = ["swanhub"]

[tool.hatch.build.targets.wheel.shared-data]
"swanhub/static" = "share/jupyterhub/static/swan"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder==0.9.1"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["swanhub/static/css/style.css"]
